--- a/includes/beeper.cfg
+++ b/includes/beeper.cfg
@@ -1,7 +1,7 @@
 [output_pin BEEPER_pin]
 #   Beeper pin. This parameter must be provided.
 #pin: rpi:gpio21
-pin: PC6 # Ender3 mono screen
+pin: assist:PC6 # Ender3 mono screen
 pwm: True
 value: 0
 shutdown_value: 0
