--- a/includes/mcu-pico.cfg
+++ b/includes/mcu-pico.cfg
@@ -12,23 +12,24 @@ enable_pin: !gpio12
 endstop_pin: tmc2209_stepper_x:virtual_endstop ## PUT the FUKKEN Jumper on the physical DIAG Pins
 homing_retract_dist: 0 # also sensorless config
 
+homing_speed: 60
 microsteps: 16
 rotation_distance: 40
+position_min: 0
 position_endstop: 0
-position_max: 235
-homing_speed: 50
+position_max: 250
 
 
 [tmc2209 stepper_x]
 uart_pin: gpio9
 tx_pin: gpio8
 uart_address: 0
-run_current: 0.8
-hold_current: 0.6
+run_current: 0.6
+hold_current: 0.4
 stealthchop_threshold: 999999
 #sensorless
 diag_pin: ^gpio4
-driver_SGTHRS: 111
+driver_SGTHRS: 105
 
 [stepper_y]
 step_pin: gpio6
@@ -38,18 +39,20 @@ enable_pin: !gpio7
 endstop_pin: tmc2209_stepper_y:virtual_endstop ## PUT the FUKKEN Jumper on the physical DIAG Pins
 homing_retract_dist: 0 # also sensorless config
 
-position_endstop: 0
-position_max: 235
-homing_speed: 50
+homing_speed: 60
 microsteps: 16
 rotation_distance: 40
+position_min: 0
+position_endstop: 0
+position_max: 245
+
 
 [tmc2209 stepper_y]
 uart_pin: gpio9
 tx_pin: gpio8
 uart_address: 2
-run_current: 0.8
-hold_current: 0.6
+run_current: 0.6
+hold_current: 0.4
 stealthchop_threshold: 999999
 #sensorless
 diag_pin: ^gpio3
@@ -94,7 +97,7 @@ filament_diameter: 1.750
 uart_pin: gpio9
 tx_pin: gpio8
 uart_address: 3
-run_current: 0.650
+run_current: 0.780
 hold_current: 0.500
 stealthchop_threshold: 999999
 
@@ -114,11 +117,12 @@ stealthchop_threshold: 999999
 
 #[heater_fan hotend_fan]
 #smoked does nothing # pin: gpio18
+#heater: extruder
+#heater_temp: 50.0
 
 #[fan_generic controller_fan]
 pin: gpio20
-#heater: extruder
-#heater_temp: 50.0
+
 
 [neopixel board_neopixel]
 pin: gpio24
