--- a/printer.cfg
+++ b/printer.cfg
@@ -10,10 +10,10 @@
 #[include includes/print_area_bed_mesh.cfg]
 [include includes/general_macros.cfg]
 [include includes/gcode_override.cfg]
-#[include includes/beeper.cfg]
+[include includes/beeper.cfg]
 #[include includes/set_pa.cfg]
 [include includes/override_m109-190.cfg]
-#[include includes/klicky/klicky-probe.cfg]
+[include includes/sensorless_extra.cfg]
 
 ########################
 ## General
@@ -21,9 +21,9 @@
 [printer]
 kinematics: corexy
 max_velocity: 300  
-max_accel: 3000             #Max 4000
-max_z_velocity: 15          #Max 15 for 12V TMC Drivers, can increase for 24V
-max_z_accel: 350
+max_accel: 3000
+max_z_velocity: 5
+max_z_accel: 100
 square_corner_velocity: 5.0
 
 
@@ -44,7 +44,21 @@ timeout: 1200 # The default is 600 seconds
 gcode:
     Shutdown_Printer
 
-
+[z_tilt]
+##  Use Z_TILT_ADJUST to level the bed .
+##  z_positions: Location of toolhead
+z_positions:
+   -50, 240   # stepper_z
+   134, -32   # z1
+   326, 240    # z2
+points:   # doku says nozzel coord but looks like its nozzle - probe offset
+   1, 224
+   89, 55
+   165, 224
+speed: 100 #200
+horizontal_move_z: 15
+retries: 5
+retry_tolerance: 0.0075
 
 [screws_tilt_adjust]
 speed: 100 #200
@@ -63,7 +77,7 @@ screw4:  30,  11
 
 [bed_mesh]
 speed: 100
-horizontal_move_z: 20
+horizontal_move_z: 15
 mesh_min:   10, 20
 mesh_max: 220, 190
 probe_count: 7,7
