--- a/includes/general_macros.cfg
+++ b/includes/general_macros.cfg
@@ -32,7 +32,10 @@ gcode:
 [gcode_macro HOME_UNHOMED]
 gcode:
     {% if "x" not in printer.toolhead.homed_axes or "y" not in printer.toolhead.homed_axes or "z" not in printer.toolhead.homed_axes %}
-      G28
+      G28 Y0 X0 Z0
+      Z_TILT_ADJUST
+      G28 Y0 X0 Z0
+
       G91 # relative positioning
       G1 Z10 F3600
       G90 ; Set coordinates to absolute
@@ -143,6 +146,8 @@ gcode:
 
     _beep_caution_printer_moving
     G4 P5000                            # 5 seconds
+
+    HOME_UNHOMED
 
     RESPOND PREFIX= MSG="Creating a mesh from {params.AREA_START} to {params.AREA_END}"
     M117 Creating a mesh from {params.AREA_START} to {params.AREA_END}
