--- a/includes/mcu-creality.cfg
+++ b/includes/mcu-creality.cfg
@@ -5,35 +5,27 @@
 serial: /dev/serial/by-id/usb-1a86_USB_Serial-if00-port0
 restart_method: command
 
-[stepper_z]
-step_pin: assist:PB8
-dir_pin: assist:PB7
+[stepper_z] # [stepper_z]
+step_pin: assist:PB6
+dir_pin: assist:PB5
 enable_pin: !assist:PC3
-
-### bltouch
 #endstop_pin: ^assist:PA6
+full_steps_per_rotation: 200
+microsteps: 16
+rotation_distance: 8
+
+
 endstop_pin: probe:z_virtual_endstop
 #position_endstop: 0
 
-position_max: 300
+position_max: 250
 position_min: -5
 homing_speed: 8
 second_homing_speed: 3.0
 homing_retract_dist: 3.0
-full_steps_per_rotation: 200
-microsteps: 16
-rotation_distance: 8
 
-[stepper_z1]
-step_pin: assist:PB6
-dir_pin: assist:PB5
-enable_pin: !assist:PC3
-#endstop_pin: ^assist:PA7
-full_steps_per_rotation: 200
-microsteps: 16
-rotation_distance: 8
 
-[stepper_z2]
+[stepper_z1] # [stepper_x]
 step_pin: assist:PC2
 dir_pin: assist:PB9
 enable_pin: !assist:PC3
@@ -41,6 +33,18 @@ enable_pin: !assist:PC3
 full_steps_per_rotation: 200
 microsteps: 16
 rotation_distance: 8
+
+
+[stepper_z2] # [stepper_y]
+step_pin: assist:PB8
+dir_pin: assist:PB7
+enable_pin: !assist:PC3
+#endstop_pin: ^assist:PA7
+full_steps_per_rotation: 200
+microsteps: 16
+rotation_distance: 8
+
+
 
 #[extruder]
 #max_extrude_only_distance: 100.0
@@ -72,39 +76,35 @@ pid_Kd: 948.182
 min_temp: 0
 max_temp: 130
 
-[fan]
+
+[heater_fan heatbreak]
 pin: assist:PA0
+heater: extruder
+heater_temp: 50.0
 
 [bltouch]
 sensor_pin: ^assist:PB1
 control_pin: assist:PB0
-x_offset: -28
-y_offset: -25
+x_offset: -32.8
+y_offset: -8.8
 speed: 3
 lift_speed: 3
-samples: 3
+samples: 1
 sample_retract_dist: 8.0
 samples_tolerance: 0.02
 samples_tolerance_retries: 3
-probe_with_touch_mode: true
-z_offset: 3.590
+z_offset: 3.5
 
 
-[safe_z_home]
-home_xy_position: 90, 135
-speed: 50
-z_hop: 10
-z_hop_speed: 5
-move_to_previous: false
+## homing_override and safe_z_homing cannot be used simultaneously
+#[safe_z_home]
+#home_xy_position: 90, 135
+#speed: 50
+#z_hop: 10
+#z_hop_speed: 5
+#move_to_previous: false
 
 
-#[display]
-#lcd_type: st7920
-#cs_pin: assist:PA3
-#sclk_pin: assist:PA1
-#sid_pin: assist:PC1
-#encoder_pins: ^assist:PD2, ^assist:PD3
-#click_pin: ^!assist:PC0
 
 [display] # RET6 12864 LCD
 lcd_type: st7920
