--- a/moonraker.conf
+++ b/moonraker.conf
@@ -88,3 +88,10 @@ origin: https://github.com/mainsail-crew/sonar.git
 primary_branch: main
 managed_services: sonar
 install_script: tools/install.sh
+
+#[button estop]
+#type: gpio
+#pin: gpio16
+#on_press:
+#  {% do call_method("printer.emergency_stop") %}
+
