fuk bltouch, fuk mesh

--- a/moonraker.conf
+++ b/moonraker.conf
@@ -89,9 +89,9 @@ primary_branch: main
 managed_services: sonar
 install_script: tools/install.sh
 
-#[button estop]
-#type: gpio
-#pin: gpio16
-#on_press:
-#  {% do call_method("printer.emergency_stop") %}
+[button estop]
+type: gpio
+pin: gpio21
+on_press:
+  {% do call_method("printer.emergency_stop") %}
 
