--- a/includes/mcu-pico.cfg
+++ b/includes/mcu-pico.cfg
@@ -15,7 +15,7 @@ homing_retract_dist: 0 # also sensorless config
 homing_speed: 60
 microsteps: 16
 rotation_distance: 40
-position_min: 0
+position_min: -32 # fuk bltouch # 0
 position_endstop: 0
 position_max: 250
 
