--- a/printer.cfg
+++ b/printer.cfg
@@ -21,10 +21,10 @@
 [printer]
 kinematics: corexy
 max_velocity: 300  
-max_accel: 3000
-max_z_velocity: 5
+max_accel: 6500
+max_z_velocity: 10
 max_z_accel: 100
-square_corner_velocity: 5.0
+square_corner_velocity: 6.0
 
 
 [virtual_sdcard]
@@ -55,8 +55,8 @@ points:   # doku says nozzel coord but looks like its nozzle - probe offset
    1, 224
    89, 55
    165, 224
-speed: 100 #200
-horizontal_move_z: 15
+speed: 200
+horizontal_move_z: 10
 retries: 5
 retry_tolerance: 0.0075
 
@@ -77,9 +77,19 @@ screw4:  30,  11
 
 [bed_mesh]
 speed: 100
-horizontal_move_z: 15
-mesh_min:   10, 20
-mesh_max: 220, 190
+horizontal_move_z: 5
+#### nozzle
+#mesh_min:  0.8, 25
+#mesh_max: 237, 245
+
+#### nozzle crash leadscrew
+#mesh_min:  4.8, 25
+#mesh_max: 237, 245
+
+#### with bltouch fuk me
+mesh_min:   -28, 33  
+mesh_max: 165, 236
+
 probe_count: 7,7
 algorithm: bicubic
 fade_start: 1
@@ -91,18 +101,74 @@ enable_force_move: True
 
 [input_shaper]
 
-
-
-
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
-#*#
-#*#
-#*#
 #*#
 #*# [input_shaper]
 #*# shaper_type_x = ei
 #*# shaper_freq_x = 48.6
 #*# shaper_type_y = zv
 #*# shaper_freq_y = 40.2
-
+#*#
+#*# [bed_mesh whileheating]
+#*# version = 1
+#*# points =
+#*# 	  -0.072808, -0.015308, 0.042192, 0.094692, 0.139692, 0.192192, 0.234692
+#*# 	  -0.037808, 0.002192, 0.052192, 0.089692, 0.124692, 0.157192, 0.179692
+#*# 	  -0.032808, 0.009692, 0.052192, 0.089692, 0.122192, 0.152192, 0.169692
+#*# 	  0.012192, 0.052192, 0.082192, 0.112192, 0.124692, 0.139692, 0.152192
+#*# 	  0.052192, 0.077192, 0.102192, 0.122192, 0.134692, 0.137192, 0.147192
+#*# 	  0.084692, 0.107192, 0.119692, 0.127192, 0.139692, 0.157192, 0.137192
+#*# 	  0.087192, 0.099692, 0.114692, 0.119692, 0.112192, 0.114692, 0.107192
+#*# x_count = 7
+#*# y_count = 7
+#*# mesh_x_pps = 2
+#*# mesh_y_pps = 2
+#*# algo = bicubic
+#*# tension = 0.2
+#*# min_x = 1.0
+#*# max_x = 164.98000000000002
+#*# min_y = 55.0
+#*# max_y = 223.95999999999998
+#*#
+#*# [bed_mesh cold]
+#*# version = 1
+#*# points =
+#*# 	  -0.092500, -0.050000, -0.017500, 0.017500, 0.040000, 0.047500, 0.052500
+#*# 	  -0.077500, -0.037500, -0.010000, 0.012500, 0.025000, 0.035000, 0.025000
+#*# 	  -0.060000, -0.035000, -0.010000, 0.002500, 0.012500, 0.015000, 0.002500
+#*# 	  -0.037500, -0.012500, 0.005000, 0.015000, 0.020000, 0.010000, -0.010000
+#*# 	  0.005000, 0.012500, 0.020000, 0.022500, 0.020000, 0.005000, -0.005000
+#*# 	  0.042500, 0.045000, 0.045000, 0.032500, 0.027500, 0.017500, -0.012500
+#*# 	  0.050000, 0.047500, 0.042500, 0.025000, 0.010000, -0.007500, -0.032500
+#*# x_count = 7
+#*# y_count = 7
+#*# mesh_x_pps = 2
+#*# mesh_y_pps = 2
+#*# algo = bicubic
+#*# tension = 0.2
+#*# min_x = 1.0
+#*# max_x = 164.98000000000002
+#*# min_y = 55.0
+#*# max_y = 223.95999999999998
+#*#
+#*# [bed_mesh 5minheated]
+#*# version = 1
+#*# points =
+#*# 	  -0.108576, -0.058576, -0.011076, 0.028924, 0.063924, 0.093924, 0.123924
+#*# 	  -0.096076, -0.058576, -0.016076, 0.013924, 0.046424, 0.066424, 0.073924
+#*# 	  -0.088576, -0.056076, -0.026076, 0.006424, 0.021424, 0.036424, 0.041424
+#*# 	  -0.071076, -0.046076, -0.016076, 0.001424, 0.011424, 0.013924, 0.013924
+#*# 	  -0.038576, -0.023576, -0.008576, 0.001424, 0.011424, 0.011424, 0.006424
+#*# 	  -0.006076, 0.003924, 0.011424, 0.011424, 0.011424, 0.013924, 0.003924
+#*# 	  0.006424, 0.008924, 0.008924, 0.006424, -0.003576, -0.013576, -0.026076
+#*# x_count = 7
+#*# y_count = 7
+#*# mesh_x_pps = 2
+#*# mesh_y_pps = 2
+#*# algo = bicubic
+#*# tension = 0.2
+#*# min_x = 1.0
+#*# max_x = 164.98000000000002
+#*# min_y = 55.0
+#*# max_y = 223.95999999999998
