--- a/printer.cfg
+++ b/printer.cfg
@@ -52,11 +52,11 @@ z_positions:
    134, -32   # z1
    326, 240    # z2
 points:   # doku says nozzel coord but looks like its nozzle - probe offset
-   1, 224
-   89, 55
-   165, 224
+   3, 229
+   101, 55
+   195, 229
 speed: 200
-horizontal_move_z: 10
+horizontal_move_z: 15
 retries: 5
 retry_tolerance: 0.0075
 
@@ -110,65 +110,14 @@ enable_force_move: True
 #*# shaper_type_y = zv
 #*# shaper_freq_y = 40.2
 #*#
-#*# [bed_mesh whileheating]
-#*# version = 1
-#*# points =
-#*# 	  -0.072808, -0.015308, 0.042192, 0.094692, 0.139692, 0.192192, 0.234692
-#*# 	  -0.037808, 0.002192, 0.052192, 0.089692, 0.124692, 0.157192, 0.179692
-#*# 	  -0.032808, 0.009692, 0.052192, 0.089692, 0.122192, 0.152192, 0.169692
-#*# 	  0.012192, 0.052192, 0.082192, 0.112192, 0.124692, 0.139692, 0.152192
-#*# 	  0.052192, 0.077192, 0.102192, 0.122192, 0.134692, 0.137192, 0.147192
-#*# 	  0.084692, 0.107192, 0.119692, 0.127192, 0.139692, 0.157192, 0.137192
-#*# 	  0.087192, 0.099692, 0.114692, 0.119692, 0.112192, 0.114692, 0.107192
-#*# x_count = 7
-#*# y_count = 7
-#*# mesh_x_pps = 2
-#*# mesh_y_pps = 2
-#*# algo = bicubic
-#*# tension = 0.2
-#*# min_x = 1.0
-#*# max_x = 164.98000000000002
-#*# min_y = 55.0
-#*# max_y = 223.95999999999998
+#*# [heater_bed]
+#*# control = pid
+#*# pid_kp = 71.641
+#*# pid_ki = 1.312
+#*# pid_kd = 977.908
 #*#
-#*# [bed_mesh cold]
-#*# version = 1
-#*# points =
-#*# 	  -0.092500, -0.050000, -0.017500, 0.017500, 0.040000, 0.047500, 0.052500
-#*# 	  -0.077500, -0.037500, -0.010000, 0.012500, 0.025000, 0.035000, 0.025000
-#*# 	  -0.060000, -0.035000, -0.010000, 0.002500, 0.012500, 0.015000, 0.002500
-#*# 	  -0.037500, -0.012500, 0.005000, 0.015000, 0.020000, 0.010000, -0.010000
-#*# 	  0.005000, 0.012500, 0.020000, 0.022500, 0.020000, 0.005000, -0.005000
-#*# 	  0.042500, 0.045000, 0.045000, 0.032500, 0.027500, 0.017500, -0.012500
-#*# 	  0.050000, 0.047500, 0.042500, 0.025000, 0.010000, -0.007500, -0.032500
-#*# x_count = 7
-#*# y_count = 7
-#*# mesh_x_pps = 2
-#*# mesh_y_pps = 2
-#*# algo = bicubic
-#*# tension = 0.2
-#*# min_x = 1.0
-#*# max_x = 164.98000000000002
-#*# min_y = 55.0
-#*# max_y = 223.95999999999998
-#*#
-#*# [bed_mesh 5minheated]
-#*# version = 1
-#*# points =
-#*# 	  -0.108576, -0.058576, -0.011076, 0.028924, 0.063924, 0.093924, 0.123924
-#*# 	  -0.096076, -0.058576, -0.016076, 0.013924, 0.046424, 0.066424, 0.073924
-#*# 	  -0.088576, -0.056076, -0.026076, 0.006424, 0.021424, 0.036424, 0.041424
-#*# 	  -0.071076, -0.046076, -0.016076, 0.001424, 0.011424, 0.013924, 0.013924
-#*# 	  -0.038576, -0.023576, -0.008576, 0.001424, 0.011424, 0.011424, 0.006424
-#*# 	  -0.006076, 0.003924, 0.011424, 0.011424, 0.011424, 0.013924, 0.003924
-#*# 	  0.006424, 0.008924, 0.008924, 0.006424, -0.003576, -0.013576, -0.026076
-#*# x_count = 7
-#*# y_count = 7
-#*# mesh_x_pps = 2
-#*# mesh_y_pps = 2
-#*# algo = bicubic
-#*# tension = 0.2
-#*# min_x = 1.0
-#*# max_x = 164.98000000000002
-#*# min_y = 55.0
-#*# max_y = 223.95999999999998
+#*# [extruder]
+#*# control = pid
+#*# pid_kp = 24.560
+#*# pid_ki = 1.161
+#*# pid_kd = 129.864
