--- a/includes/sensorless_extra.cfg
+++ b/includes/sensorless_extra.cfg
@@ -50,6 +50,14 @@ gcode:
   G1 Z15 F1200
   G4 P100
 
+  {% if home_all or 'Y' in params %}
+    SET_KINEMATIC_POSITION Y=0
+    G90
+    G1 Y5 F1200
+    G4 P100
+    _HOME_Y
+  {% endif %}
+
   {% if home_all or 'X' in params %}
     SET_KINEMATIC_POSITION X=0
     G90
@@ -58,17 +66,16 @@ gcode:
     _HOME_X
   {% endif %}
   
-  {% if home_all or 'Y' in params %}
-    SET_KINEMATIC_POSITION Y=0
-    G90
-    G1 Y5 F1200
-    G4 P100
-    _HOME_Y
-  {% endif %}
-  
   {% if home_all or 'Z' in params %}
-    G90
-    G1 X90 Y135 F6000
+    {% if home_all %}
+      G90
+      G1 X90 Y135 F6000
+    {% endif %}
+    {% if "x" in printer.toolhead.homed_axes and "y" in printer.toolhead.homed_axes %}
+      G90
+      G1 X90 Y135 F6000
+    {% endif %}
     G28 Z
     G1 Z10
   {% endif %}
+
