--- a/includes/mcu-pico.cfg
+++ b/includes/mcu-pico.cfg
@@ -6,7 +6,7 @@ restart_method: command
 
 [stepper_x]
 step_pin: gpio11
-dir_pin: !gpio10
+dir_pin: gpio10
 enable_pin: !gpio12
 #endstop_pin: ^gpio4
 endstop_pin: tmc2209_stepper_x:virtual_endstop ## PUT the FUKKEN Jumper on the physical DIAG Pins
@@ -15,9 +15,10 @@ homing_retract_dist: 0 # also sensorless config
 homing_speed: 60
 microsteps: 16
 rotation_distance: 40
-position_min: -32 # fuk bltouch # 0
-position_endstop: 0
+position_min: 0
+position_endstop: 250
 position_max: 250
+homing_positive_dir: true
 
 
 [tmc2209 stepper_x]
@@ -33,7 +34,7 @@ driver_SGTHRS: 105
 
 [stepper_y]
 step_pin: gpio6
-dir_pin: !gpio5
+dir_pin: gpio5
 enable_pin: !gpio7
 #endstop_pin: ^gpio3
 endstop_pin: tmc2209_stepper_y:virtual_endstop ## PUT the FUKKEN Jumper on the physical DIAG Pins
@@ -43,8 +44,9 @@ homing_speed: 60
 microsteps: 16
 rotation_distance: 40
 position_min: 0
-position_endstop: 0
-position_max: 245
+position_endstop: 250
+position_max: 250
+homing_positive_dir: true
 
 
 [tmc2209 stepper_y]
@@ -86,7 +88,10 @@ control: pid
 min_temp: 0
 max_temp: 280
 microsteps: 16
-rotation_distance: 33.500
+
+rotation_distance: 22.6789511   #Bondtech 5mm Drive Gears
+gear_ratio: 50:17               #BMG Gear Ratio
+
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 
