--- a/moonraker.conf
+++ b/moonraker.conf
@@ -89,9 +89,8 @@ primary_branch: main
 managed_services: sonar
 install_script: tools/install.sh
 
-[button estop]
+[button power_button]
 type: gpio
-pin: gpio21
+pin: gpio03
 on_press:
   {% do call_method("printer.emergency_stop") %}
-
