--- a/printer.cfg
+++ b/printer.cfg
@@ -7,7 +7,7 @@
 [include includes/mcu-rpi.cfg]
 
 #[include includes/stealthburner_leds.cfg]
-#[include includes/print_area_bed_mesh.cfg]
+[include includes/print_area_bed_mesh.cfg]
 [include includes/general_macros.cfg]
 [include includes/gcode_override.cfg]
 [include includes/beeper.cfg]
@@ -46,13 +46,13 @@ gcode:
 
 [z_tilt]
 z_positions:
-   -50, 240   # stepper_z
-   134, -32   # z1
-   326, 240    # z2
-points:   # doku says nozzel coord but looks like its nozzle - probe offset
-   3, 229
-   101, 45
-   195, 229
+   -50, 18   # z0 left front 
+   117, 298  # z1 center back  +7, 
+   313, 18   # z2 right
+points:   # doku says nozzel coord but looks like its nozzle & probe offset
+    63, 18     # z0 left front 36,36
+   149,196  # z1 center back
+   236, 18    # z2 right     36, 36
 speed: 200
 horizontal_move_z: 15
 retries: 5
@@ -85,8 +85,8 @@ horizontal_move_z: 5
 #mesh_max: 237, 245
 
 #### with bltouch fuk me
-mesh_min:   -28, 33  
-mesh_max: 165, 236
+mesh_min:   37, 33  
+mesh_max: 225, 236
 
 probe_count: 7,7
 algorithm: bicubic
@@ -109,13 +109,14 @@ enable_force_move: True
 #*# shaper_freq_y = 40.2
 #*#
 #*# [heater_bed]
-#*# control = pid
 #*# pid_kp = 71.641
 #*# pid_ki = 1.312
 #*# pid_kd = 977.908
 #*#
 #*# [extruder]
-#*# control = pid
 #*# pid_kp = 24.560
 #*# pid_ki = 1.161
 #*# pid_kd = 129.864
+#*#
+#*# [bltouch]
+#*# z_offset = 1.150
