--- a/includes/mcu-creality.cfg
+++ b/includes/mcu-creality.cfg
@@ -5,26 +5,27 @@
 serial: /dev/serial/by-id/usb-1a86_USB_Serial-if00-port0
 restart_method: command
 
-[stepper_z] # [stepper_z]
-step_pin: assist:PB6
-dir_pin: assist:PB5
+# front left
+[stepper_z] # [stepper_y]
+step_pin: assist:PB8
+dir_pin: assist:PB7
 enable_pin: !assist:PC3
-#endstop_pin: ^assist:PA6
+#endstop_pin: ^assist:PA7
 full_steps_per_rotation: 200
 microsteps: 16
 rotation_distance: 8
-
 
 endstop_pin: probe:z_virtual_endstop
 #position_endstop: 0
 
 position_max: 250
-position_min: -5
+position_min: -10
 homing_speed: 8
 second_homing_speed: 3.0
 homing_retract_dist: 3.0
 
 
+# back center
 [stepper_z1] # [stepper_x]
 step_pin: assist:PC2
 dir_pin: assist:PB9
@@ -35,15 +36,15 @@ microsteps: 16
 rotation_distance: 8
 
 
-[stepper_z2] # [stepper_y]
-step_pin: assist:PB8
-dir_pin: assist:PB7
+#front right
+[stepper_z2] # [stepper_z]
+step_pin: assist:PB6
+dir_pin: assist:PB5
 enable_pin: !assist:PC3
-#endstop_pin: ^assist:PA7
+#endstop_pin: ^assist:PA6
 full_steps_per_rotation: 200
 microsteps: 16
 rotation_distance: 8
-
 
 
 #[extruder]
@@ -80,14 +81,14 @@ heater_temp: 50.0
 sensor_pin: ^assist:PB1
 control_pin: assist:PB0
 x_offset: -32.8
-y_offset: -8.8
+y_offset:  -8.8
 speed: 3
 lift_speed: 3
 samples: 1
 sample_retract_dist: 8.0
 samples_tolerance: 0.02
 samples_tolerance_retries: 3
-z_offset: 3.5
+#z_offset: 1.450
 
 
 ## homing_override and safe_z_homing cannot be used simultaneously
