--- a/printer.cfg
+++ b/printer.cfg
@@ -64,13 +64,13 @@ horizontal_move_z: 10
 screw_thread: CW-M4 
 ## screws are the nozzles positions, so apply probe offset
 screw1_name: rear left screw
-screw1: 179,  59
+screw1: 64,  190
 screw2_name: rear right screw
-screw2:   9,  59
+screw2: 235, 190
 screw3_name: front right screw
-screw3:   9, 230
+screw3: 235, 20
 screw4_name: front left screw
-screw4: 179, 230
+screw4:  64, 20
 
 
 [bed_mesh]
@@ -84,9 +84,10 @@ horizontal_move_z: 5
 #mesh_min:  4.8, 25
 #mesh_max: 237, 245
 
-#### with bltouch fuk me
-mesh_min:   37, 33  
-mesh_max: 225, 236
+## value is WITH probe offset
+#### with bltouch fuk me  -32.8, -8.8
+mesh_min:   7, 0    # real  39.8, 8.8
+mesh_max: 210, 203
 
 probe_count: 7,7
 algorithm: bicubic
@@ -119,4 +120,4 @@ enable_force_move: True
 #*# pid_kd = 129.864
 #*#
 #*# [bltouch]
-#*# z_offset = 1.150
+#*# z_offset = 1.700
