--- a/includes/mcu-pico.cfg
+++ b/includes/mcu-pico.cfg
@@ -10,10 +10,10 @@ dir_pin: gpio10
 enable_pin: !gpio12
 #endstop_pin: ^gpio4
 endstop_pin: tmc2209_stepper_x:virtual_endstop ## PUT the FUKKEN Jumper on the physical DIAG Pins
-homing_retract_dist: 0 # also sensorless config
+homing_retract_dist: 0 #  sensorless config
 
-homing_speed: 60
-microsteps: 16
+homing_speed: 50
+microsteps: 64 # 16 https://www.klipper3d.org/TMC_Drivers.html
 rotation_distance: 40
 position_min: 0
 position_endstop: 250
@@ -26,8 +26,11 @@ uart_pin: gpio9
 tx_pin: gpio8
 uart_address: 0
 run_current: 0.6
-hold_current: 0.4
-stealthchop_threshold: 999999
+# hold_current: 0.4 # https://github.com/Klipper3d/klipper/pull/4977
+
+# stealthchop_threshold: 999999  # https://www.klipper3d.org/TMC_Drivers.html
+interpolate: False  # https://www.klipper3d.org/TMC_Drivers.html
+
 #sensorless
 diag_pin: ^gpio4
 driver_SGTHRS: 105
@@ -38,10 +41,10 @@ dir_pin: gpio5
 enable_pin: !gpio7
 #endstop_pin: ^gpio3
 endstop_pin: tmc2209_stepper_y:virtual_endstop ## PUT the FUKKEN Jumper on the physical DIAG Pins
-homing_retract_dist: 0 # also sensorless config
+homing_retract_dist: 0 # sensorless config
 
-homing_speed: 60
-microsteps: 16
+homing_speed: 50
+microsteps: 64 # 16 https://www.klipper3d.org/TMC_Drivers.html
 rotation_distance: 40
 position_min: 0
 position_endstop: 250
@@ -54,7 +57,7 @@ uart_pin: gpio9
 tx_pin: gpio8
 uart_address: 2
 run_current: 0.6
-hold_current: 0.4
+# hold_current: 0.4 # https://github.com/Klipper3d/klipper/pull/4977
 stealthchop_threshold: 999999
 #sensorless
 diag_pin: ^gpio3
@@ -74,7 +77,8 @@ driver_SGTHRS: 111
 #uart_pin: gpio9
 #tx_pin: gpio8
 #uart_address: 1
-#run_current: 0.580
+#run_current: 0.6
+# hold_current: 0.4 # https://github.com/Klipper3d/klipper/pull/4977
 #stealthchop_threshold: 999999
 
 [extruder]
@@ -89,7 +93,8 @@ min_temp: 0
 max_temp: 280
 microsteps: 16
 
-rotation_distance: 22.6789511   #Bondtech 5mm Drive Gears
+#rotation_distance: 22.6789511   #Bondtech 5mm Drive Gears
+rotation_distance: 22.172
 gear_ratio: 50:17               #BMG Gear Ratio
 
 nozzle_diameter: 0.400
@@ -100,7 +105,7 @@ uart_pin: gpio9
 tx_pin: gpio8
 uart_address: 3
 run_current: 0.780
-hold_current: 0.500
+# hold_current: 0.5 # https://github.com/Klipper3d/klipper/pull/4977
 stealthchop_threshold: 999999
 
 #[heater_bed]
