--- a/printer.cfg
+++ b/printer.cfg
@@ -15,13 +15,17 @@
 [include includes/override_m109-190.cfg]
 [include includes/sensorless_extra.cfg]
 
+[include includes/test_speed.cfg]
+
+
+
 ########################
 ## General
 
 [printer]
 kinematics: corexy
 max_velocity: 300  
-max_accel: 6500
+max_accel: 10000
 max_z_velocity: 10
 max_z_accel: 100
 square_corner_velocity: 6.0
@@ -105,9 +109,9 @@ enable_force_move: True
 #*#
 #*# [input_shaper]
 #*# shaper_type_x = ei
-#*# shaper_freq_x = 48.6
-#*# shaper_type_y = zv
-#*# shaper_freq_y = 40.2
+#*# shaper_freq_x = 84.4
+#*# shaper_type_y = mzv
+#*# shaper_freq_y = 47.4
 #*#
 #*# [heater_bed]
 #*# pid_kp = 71.641
@@ -120,4 +124,23 @@ enable_force_move: True
 #*# pid_kd = 129.864
 #*#
 #*# [bltouch]
-#*# z_offset = 1.700
+#*# z_offset = 1.885
+#*#
+#*# [bed_mesh default]
+#*# version = 1
+#*# points =
+#*# 	0.006462, 0.001462, 0.001462, 0.003962, 0.013962
+#*# 	0.003962, -0.001038, 0.001462, 0.006462, 0.013962
+#*# 	0.006462, 0.006462, -0.001038, 0.011462, 0.023962
+#*# 	0.016462, 0.016462, 0.018962, 0.018962, 0.028962
+#*# 	0.011462, 0.001462, 0.013962, 0.018962, 0.018962
+#*# x_count = 5
+#*# y_count = 5
+#*# mesh_x_pps = 2
+#*# mesh_y_pps = 2
+#*# algo = bicubic
+#*# tension = 0.2
+#*# min_x = 61.67
+#*# max_x = 167.56
+#*# min_y = 76.24000000000001
+#*# max_y = 182.20999999999998
