--- a/includes/mcu-pico.cfg
+++ b/includes/mcu-pico.cfg
@@ -27,7 +27,6 @@ tx_pin: gpio8
 uart_address: 0
 run_current: 0.6
 # hold_current: 0.4 # https://github.com/Klipper3d/klipper/pull/4977
-
 # stealthchop_threshold: 999999  # https://www.klipper3d.org/TMC_Drivers.html
 interpolate: False  # https://www.klipper3d.org/TMC_Drivers.html
 
@@ -58,7 +57,9 @@ tx_pin: gpio8
 uart_address: 2
 run_current: 0.6
 # hold_current: 0.4 # https://github.com/Klipper3d/klipper/pull/4977
-stealthchop_threshold: 999999
+# stealthchop_threshold: 999999  # https://www.klipper3d.org/TMC_Drivers.html
+interpolate: False  # https://www.klipper3d.org/TMC_Drivers.html
+
 #sensorless
 diag_pin: ^gpio3
 driver_SGTHRS: 111
@@ -67,7 +68,7 @@ driver_SGTHRS: 111
 #step_pin: gpio19
 #dir_pin: gpio28
 #enable_pin: !gpio2
-#microsteps: 16
+#microsteps: 64 # 16
 #rotation_distance: 8
 #endstop_pin: ^gpio25
 #position_endstop: 0.0
@@ -78,8 +79,10 @@ driver_SGTHRS: 111
 #tx_pin: gpio8
 #uart_address: 1
 #run_current: 0.6
-# hold_current: 0.4 # https://github.com/Klipper3d/klipper/pull/4977
-#stealthchop_threshold: 999999
+## hold_current: 0.4 # https://github.com/Klipper3d/klipper/pull/4977
+# stealthchop_threshold: 999999  # https://www.klipper3d.org/TMC_Drivers.html
+#interpolate: False  # https://www.klipper3d.org/TMC_Drivers.html
+
 
 [extruder]
 step_pin: gpio14
@@ -91,14 +94,16 @@ sensor_pin: gpio27
 control: pid
 min_temp: 0
 max_temp: 280
-microsteps: 16
+microsteps: 32
 
 #rotation_distance: 22.6789511   #Bondtech 5mm Drive Gears
-rotation_distance: 22.172
+rotation_distance: 23.68    # set so i can use the same filament profile between printers
 gear_ratio: 50:17               #BMG Gear Ratio
 
-nozzle_diameter: 0.400
+nozzle_diameter: 0.735
 filament_diameter: 1.750
+pressure_advance: 0.6
+pressure_advance_smooth_time: 0.040
 
 [tmc2209 extruder]
 uart_pin: gpio9
@@ -106,7 +111,8 @@ tx_pin: gpio8
 uart_address: 3
 run_current: 0.780
 # hold_current: 0.5 # https://github.com/Klipper3d/klipper/pull/4977
-stealthchop_threshold: 999999
+# stealthchop_threshold: 999999  # https://www.klipper3d.org/TMC_Drivers.html
+interpolate: False  # https://www.klipper3d.org/TMC_Drivers.html
 
 #[heater_bed]
 #heater_pin: gpio21
