--- a/printer.cfg
+++ b/printer.cfg
@@ -12,7 +12,6 @@
 [include includes/gcode_override.cfg]
 [include includes/beeper.cfg]
 #[include includes/set_pa.cfg]
-[include includes/override_m109-190.cfg]
 [include includes/sensorless_extra.cfg]
 
 [include includes/test_speed.cfg]
@@ -124,23 +123,25 @@ enable_force_move: True
 #*# pid_kd = 129.864
 #*#
 #*# [bltouch]
-#*# z_offset = 1.885
+#*# z_offset = 1.905
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	0.006462, 0.001462, 0.001462, 0.003962, 0.013962
-#*# 	0.003962, -0.001038, 0.001462, 0.006462, 0.013962
-#*# 	0.006462, 0.006462, -0.001038, 0.011462, 0.023962
-#*# 	0.016462, 0.016462, 0.018962, 0.018962, 0.028962
-#*# 	0.011462, 0.001462, 0.013962, 0.018962, 0.018962
-#*# x_count = 5
-#*# y_count = 5
+#*# 	0.000000, -0.010000, -0.035000, -0.037500, -0.032500, -0.025000, 0.000000
+#*# 	0.040000, 0.012500, 0.002500, 0.000000, 0.002500, 0.015000, 0.042500
+#*# 	0.032500, 0.020000, 0.002500, 0.000000, 0.000000, 0.015000, 0.040000
+#*# 	0.012500, 0.005000, 0.002500, 0.000000, 0.007500, 0.015000, 0.032500
+#*# 	0.025000, 0.017500, 0.010000, 0.012500, 0.025000, 0.035000, 0.055000
+#*# 	0.050000, 0.015000, 0.007500, 0.015000, 0.022500, 0.032500, 0.057500
+#*# 	0.047500, 0.020000, 0.005000, 0.007500, 0.015000, 0.022500, 0.045000
+#*# x_count = 7
+#*# y_count = 7
 #*# mesh_x_pps = 2
 #*# mesh_y_pps = 2
 #*# algo = bicubic
 #*# tension = 0.2
-#*# min_x = 61.67
-#*# max_x = 167.56
-#*# min_y = 76.24000000000001
-#*# max_y = 182.20999999999998
+#*# min_x = 7.0
+#*# max_x = 209.98000000000002
+#*# min_y = 0.0
+#*# max_y = 202.98
