--- a/includes/general_macros.cfg
+++ b/includes/general_macros.cfg
@@ -149,10 +149,10 @@ gcode:
 
     HOME_UNHOMED
 
-    RESPOND PREFIX= MSG="Creating a mesh from {params.AREA_START} to {params.AREA_END}"
-    M117 Creating a mesh from {params.AREA_START} to {params.AREA_END}
-    BED_MESH_CALIBRATE PRINT_MIN={params.AREA_START} PRINT_MAX={params.AREA_END}  # Turge08/print_area_bed_mesh.cfg
-    BED_MESH_PROFILE LOAD=default # Klipper change planned for 1st February '23
+#    RESPOND PREFIX= MSG="Creating a mesh from {params.AREA_START} to {params.AREA_END}"
+#    M117 Creating a mesh from {params.AREA_START} to {params.AREA_END}
+#    BED_MESH_CALIBRATE PRINT_MIN={params.AREA_START} PRINT_MAX={params.AREA_END}  # Turge08/print_area_bed_mesh.cfg
+#    BED_MESH_PROFILE LOAD=default # Klipper change planned for 1st February '23
 
     STATUS_HEATING
     RESPOND PREFIX= MSG="Waiting for extruder temp..."
