--- a/moonraker.conf
+++ b/moonraker.conf
@@ -7,8 +7,19 @@ max_upload_size: 1024
 klippy_uds_address: ~/printer_data/comms/klippy.sock
 
 [file_manager]
-# post processing for object cancel. Not recommended for low resource SBCs such as a Pi Zero. Default False
-enable_object_processing: False
+enable_object_processing: True
+# Configure the file manager to queue uploaded files when the "start" flag
+# is set and Klipper cannot immediately start the print.
+queue_gcode_uploads: True
+
+# Configure the Job Queue to start a queued print when Klipper reports as
+# ready.
+[job_queue]
+load_on_startup: True
+
+[data_store]
+temperature_store_size: 600
+gcode_store_size: 1000
 
 [authorization]
 cors_domains:
