--- a/printer.cfg
+++ b/printer.cfg
@@ -13,6 +13,7 @@
 [include includes/beeper.cfg]
 #[include includes/set_pa.cfg]
 [include includes/sensorless_extra.cfg]
+[include includes/display.cfg]
 
 [include includes/test_speed.cfg]
 
@@ -41,6 +42,7 @@ path: /home/pi/printer_data/gcodes
 
 [respond]
 
+[exclude_object]
 
 [idle_timeout]
 timeout: 1200 # The default is 600 seconds
@@ -123,25 +125,4 @@ enable_force_move: True
 #*# pid_kd = 129.864
 #*#
 #*# [bltouch]
-#*# z_offset = 1.905
-#*#
-#*# [bed_mesh default]
-#*# version = 1
-#*# points =
-#*# 	0.000000, -0.010000, -0.035000, -0.037500, -0.032500, -0.025000, 0.000000
-#*# 	0.040000, 0.012500, 0.002500, 0.000000, 0.002500, 0.015000, 0.042500
-#*# 	0.032500, 0.020000, 0.002500, 0.000000, 0.000000, 0.015000, 0.040000
-#*# 	0.012500, 0.005000, 0.002500, 0.000000, 0.007500, 0.015000, 0.032500
-#*# 	0.025000, 0.017500, 0.010000, 0.012500, 0.025000, 0.035000, 0.055000
-#*# 	0.050000, 0.015000, 0.007500, 0.015000, 0.022500, 0.032500, 0.057500
-#*# 	0.047500, 0.020000, 0.005000, 0.007500, 0.015000, 0.022500, 0.045000
-#*# x_count = 7
-#*# y_count = 7
-#*# mesh_x_pps = 2
-#*# mesh_y_pps = 2
-#*# algo = bicubic
-#*# tension = 0.2
-#*# min_x = 7.0
-#*# max_x = 209.98000000000002
-#*# min_y = 0.0
-#*# max_y = 202.98
+#*# z_offset = 1.955
