--- a/includes/mcu-pico.cfg
+++ b/includes/mcu-pico.cfg
@@ -25,7 +25,7 @@ homing_positive_dir: true
 uart_pin: gpio9
 tx_pin: gpio8
 uart_address: 0
-run_current: 0.6
+run_current: 0.58
 # hold_current: 0.4 # https://github.com/Klipper3d/klipper/pull/4977
 # stealthchop_threshold: 999999  # https://www.klipper3d.org/TMC_Drivers.html
 interpolate: False  # https://www.klipper3d.org/TMC_Drivers.html
@@ -55,7 +55,7 @@ homing_positive_dir: true
 uart_pin: gpio9
 tx_pin: gpio8
 uart_address: 2
-run_current: 0.6
+run_current: 0.58
 # hold_current: 0.4 # https://github.com/Klipper3d/klipper/pull/4977
 # stealthchop_threshold: 999999  # https://www.klipper3d.org/TMC_Drivers.html
 interpolate: False  # https://www.klipper3d.org/TMC_Drivers.html
@@ -95,14 +95,14 @@ control: pid
 min_temp: 0
 max_temp: 280
 microsteps: 32
-
-#rotation_distance: 22.6789511   #Bondtech 5mm Drive Gears
-rotation_distance: 23.68    # set so i can use the same filament profile between printers
-gear_ratio: 50:17               #BMG Gear Ratio
-
+# Default for Bondtech 5mm Bore Drive Gears
+rotation_distance: 22.6789511 # CW2
+#rotation_distance: 36.1182 #LDO Galileo Clockwork
+gear_ratio: 50:10 #CW2
+#gear_ratio: 7.5:1  #LDO Galileo Clockwork
 nozzle_diameter: 0.735
 filament_diameter: 1.750
-pressure_advance: 0.6
+pressure_advance: 0.02
 pressure_advance_smooth_time: 0.040
 
 [tmc2209 extruder]
@@ -134,13 +134,26 @@ interpolate: False  # https://www.klipper3d.org/TMC_Drivers.html
 pin: gpio20
 
 
-[neopixel board_neopixel]
-pin: gpio24
-chain_count: 1
-color_order: GRB
-initial_RED: 0.3
-initial_GREEN: 0.3
-initial_BLUE: 0.3
+# see sb_led config
+#[neopixel board_neopixel]
+#pin: gpio24
+#chain_count: 1
+#color_order: GRB
+#initial_RED: 0.3
+#initial_GREEN: 0.3
+#initial_BLUE: 0.3
+
+#[bltouch]
+#sensor_pin: ^gpio22
+#control_pin: gpio29
+#x_offset: -32.8
+#y_offset:  -8.8
+#speed: 3
+#lift_speed: 3
+#samples: 1
+#sample_retract_dist: 8.0
+#samples_tolerance: 0.02
+#samples_tolerance_retries: 3
 
 #[bltouch]
 #sensor_pin: gpio22
