--- a/printer.cfg
+++ b/printer.cfg
@@ -6,7 +6,7 @@
 [include includes/mcu-creality.cfg]
 [include includes/mcu-rpi.cfg]
 
-#[include includes/stealthburner_leds.cfg]
+[include includes/stealthburner_leds.cfg]
 [include includes/print_area_bed_mesh.cfg]
 [include includes/general_macros.cfg]
 [include includes/gcode_override.cfg]
@@ -110,9 +110,9 @@ enable_force_move: True
 #*#
 #*# [input_shaper]
 #*# shaper_type_x = ei
-#*# shaper_freq_x = 84.4
-#*# shaper_type_y = mzv
-#*# shaper_freq_y = 47.4
+#*# shaper_freq_x = 79.0
+#*# shaper_type_y = 2hump_ei
+#*# shaper_freq_y = 65.0
 #*#
 #*# [heater_bed]
 #*# pid_kp = 71.641
@@ -125,4 +125,5 @@ enable_force_move: True
 #*# pid_kd = 129.864
 #*#
 #*# [bltouch]
-#*# z_offset = 1.955
+#*# z_offset = 2.180
+#*#
