--- a/includes/general_macros.cfg
+++ b/includes/general_macros.cfg
@@ -94,8 +94,8 @@ variable_extrude: 1.0
 gcode:
   ##### set park positon for x and y #####
   # default is your max posion from your printer.cfg
-  {% set x_park = printer.toolhead.axis_maximum.x|float - 5.0 %}
-  {% set y_park = printer.toolhead.axis_maximum.y|float - 5.0 %}
+  {% set x_park = printer.toolhead.axis_maximum.x|float - 10.0 %} # 5 => 10
+  {% set y_park = printer.toolhead.axis_maximum.y|float - 10.0 %} # 5 => 10
   {% set z_park_delta = 2.0 %}
   ##### calculate save lift position #####
   {% set max_z = printer.toolhead.axis_maximum.z|float %}
@@ -149,10 +149,10 @@ gcode:
 
     HOME_UNHOMED
 
-#    RESPOND PREFIX= MSG="Creating a mesh from {params.AREA_START} to {params.AREA_END}"
-#    M117 Creating a mesh from {params.AREA_START} to {params.AREA_END}
-#    BED_MESH_CALIBRATE PRINT_MIN={params.AREA_START} PRINT_MAX={params.AREA_END}  # Turge08/print_area_bed_mesh.cfg
-#    BED_MESH_PROFILE LOAD=default # Klipper change planned for 1st February '23
+    RESPOND PREFIX= MSG="Creating a mesh from {params.AREA_START} to {params.AREA_END}"
+    M117 Creating a mesh from {params.AREA_START} to {params.AREA_END}
+    BED_MESH_CALIBRATE PRINT_MIN={params.AREA_START} PRINT_MAX={params.AREA_END}  # Turge08/print_area_bed_mesh.cfg
+    BED_MESH_PROFILE LOAD=default # Klipper change planned for 1st February '23
 
     STATUS_HEATING
     RESPOND PREFIX= MSG="Waiting for extruder temp..."
